Actualizar imagen de Accesorios para cuartos limpios en bento grid

--- a/src/components/shared/BentoGrid.astro
+++ b/src/components/shared/BentoGrid.astro
@@ -143,8 +143,8 @@ const t = useTranslations(lang);
           <div class="relative w-full grow flex flex-col">
             <div class="px-6 pt-4 pb-6 sm:px-8 sm:pt-4 sm:pb-8 flex-1 flex items-center">
               <img
-                src="/images/home-page/Filtros%20de%20estrella%20productos.png"
-                alt="Productos Star Filters para cuartos limpios"
+                src="/images/home-page/Filtros%20de%20Estrella%20Cuarto%20Limpio.png"
+                alt="Accesorios para cuartos limpios Star Filters"
                 class="w-full h-full rounded-lg object-cover shadow-sm"
               />
             </div>
